# xsia_docling

./: README.md  pyproject.toml
documents/result/: doc-20251007T053333Z.md
src/xsia_docling/: __init__.py
